Work around issue in OpenJDK